--- a/pom.xml
+++ b/pom.xml
@@ -532,7 +532,21 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-clean-plugin</artifactId>
-        <version>2.3</version>
+        <version>2.4.1</version>
+        <configuration>
+          <filesets>
+            <fileset>
+              <directory>.</directory>
+              <includes>
+                <include>build/</include>
+                <include>stubwrappers/</include>
+                <include>test/</include>
+                <include>**/activemq-data/</include>
+                <include>**/derby.log</include>
+              </includes>
+            </fileset>
+          </filesets>
+        </configuration>
       </plugin>
 
       <plugin>
