--- a/pom.xml
+++ b/pom.xml
@@ -544,7 +544,13 @@
                   <searchTransitive>true</searchTransitive>
                   <excludes>
                     <exclude>commons-logging</exclude>
-                    <exclude>log4j</exclude>
+                    <exclude>log4j:log4j</exclude>
+                    <exclude>org.slf4j:slf4j-jcl</exclude>
+                    <exclude>org.slf4j:slf4j-jdk14</exclude>
+                    <exclude>org.slf4j:slf4j-log4j12</exclude>
+                    <exclude>org.slf4j:slf4j-log4j13</exclude>
+                    <exclude>org.slf4j:slf4j-nop</exclude>
+                    <exclude>org.slf4j:slf4j-simple</exclude>
                   </excludes>
                 </bannedDependencies>
               </rules>
