FCREPO-820: Fixes FeSL PolicyIndex update issues
Adds PolicyIndex test cases to ConfigC, fixes issues with
- object state changes "null"
- modifications to non-FESLPOLICY datastreams
- purge datastream version
Incorporates patch from Mark Roy (see FCREPO-820 for patch)

--- a/resources/scripts/test/ConfigC.properties
+++ b/resources/scripts/test/ConfigC.properties
@@ -15,7 +15,7 @@ tomcat.shutdown.port=9005
 # Settings required for this test configuration
 apia.auth.required=true
 apia.ssl.required=false
-apim.ssl.required=false
+apim.ssl.required=true
 xacml.enabled=false
 ri.enabled=true
 messaging.enabled=false
