--- a/fcrepo-integrationtest/pom.xml
+++ b/fcrepo-integrationtest/pom.xml
@@ -572,6 +572,7 @@
                     <include>**/TestMisplacedNamespace.class</include>
                     <include>**/TestREST.class</include>
                     <include>**/TestPolicies.class</include>
+                    <include>**/TestPolicyIndex.class</include>
 
                   </includes>
                   <excludes>
