--- a/fcrepo-integrationtest/src/test/resources/config/ConfigC.properties
+++ b/fcrepo-integrationtest/src/test/resources/config/ConfigC.properties
@@ -1,25 +1,27 @@
-# Install Properties for Config B tests with bundled Tomcat and Derby
+# Install Properties for Config C tests with bundled Tomcat and Derby
+
 
 # Change these as appropriate for your test environment
 fedora.serverHost=localhost
-database.jdbcURL=jdbc\:derby\:/home/bamboo/fedora-home/derby/fedora3;create\=true
-tomcat.home=/home/bamboo/fedora-home/tomcat
-fedora.home=/home/bamboo/fedora-home
-fedora.serverContext=fedora
-tomcat.http.port=9080
-tomcat.ssl.port=9443
-tomcat.shutdown.port=9005
+database.jdbcURL=jdbc\:derby\:${fedora.home}/derby/fedora3;create\=true
+tomcat.home=${fedora.home}/tomcat
+fedora.home=${fedora.home}
+fedora.serverContext=${fedora.appServerContext}
+tomcat.http.port=${fedora.port}
+tomcat.ssl.port=${tomcat.port.ssl}
+tomcat.shutdown.port=${tomcat.port.shutdown}
+fesl.dbxml.home=${fedora.home}/dbxml-home
 
 # Settings required for this test configuration
 apia.auth.required=true
 apia.ssl.required=false
 apim.ssl.required=true
-xacml.enabled=true
+xacml.enabled=false
 ri.enabled=true
-messaging.enabled=true
+messaging.enabled=false
 messaging.uri=vm\:(broker\:(tcp\://localhost\:61616))
 fesl.authn.enabled=true
-fesl.authz.enabled=false
+fesl.authz.enabled=true
 
 # Settings common to all test configs with this appserver+db combo
 servlet.engine=included
