--- a/fcrepo-integrationtest/src/test/resources/config/ConfigLargeDS.properties
+++ b/fcrepo-integrationtest/src/test/resources/config/ConfigLargeDS.properties
@@ -1,20 +1,19 @@
-# Install Properties for Config A tests with bundled Tomcat and Derby
+# Install Properties for Large Datastream tests with bundled Tomcat and Derby
 
 # Change these as appropriate for your test environment
 fedora.serverHost=localhost
-database.jdbcURL=jdbc\:derby\:/home/bamboo/fedora-home/derby/fedora3;create\=true
-tomcat.home=/home/bamboo/fedora-home/tomcat
-fedora.home=/home/bamboo/fedora-home
-fedora.serverContext=fedora
-tomcat.http.port=9080
-tomcat.ssl.port=9443
-tomcat.shutdown.port=9005
+database.jdbcURL=jdbc\:derby\:${fedora.home}/derby/fedora3;create\=true
+tomcat.home=4{fedora.home}/tomcat
+fedora.home=${fedora.home}
+tomcat.http.port=${fedora.port}
+tomcat.ssl.port=${tomcat.port.ssl}
+tomcat.shutdown.port=${tomcat.port.shutdown}
 
 # Settings required for this test configuration
 apia.auth.required=false
 apia.ssl.required=false
-apim.ssl.required=true
-xacml.enabled=true
+apim.ssl.required=false
+xacml.enabled=false
 ri.enabled=false
 messaging.enabled=false
 fesl.authn.enabled=true
