--- a/fcrepo-integrationtest/src/test/resources/config/ConfigA.properties
+++ b/fcrepo-integrationtest/src/test/resources/config/ConfigA.properties
@@ -1,23 +1,23 @@
-# Install Properties for Config Q tests with bundled Tomcat and Derby
+# Install Properties for Config A tests with bundled Tomcat and Derby
 
 # Change these as appropriate for your test environment
 fedora.serverHost=localhost
-database.jdbcURL=jdbc\:derby\:/home/bamboo/fedora-home/derby/fedora3;create\=true
-tomcat.home=/home/bamboo/fedora-home/tomcat
-fedora.home=/home/bamboo/fedora-home
-fedora.serverContext=fedora
-tomcat.http.port=9080
-tomcat.ssl.port=9443
-tomcat.shutdown.port=9005
+database.jdbcURL=jdbc\:derby\:${fedora.home}/derby/fedora3;create\=true
+tomcat.home=${fedora.home}/tomcat
+fedora.home=${fedora.home}
+fedora.serverContext=${fedora.appServerContext}
+tomcat.http.port=${fedora.port}
+tomcat.ssl.port=${tomcat.port.ssl}
+tomcat.shutdown.port=${tomcat.port.shutdown}
 
 # Settings required for this test configuration
 apia.auth.required=false
 apia.ssl.required=false
-apim.ssl.required=false
-xacml.enabled=false
+apim.ssl.required=true
+xacml.enabled=true
 ri.enabled=false
 messaging.enabled=false
-fesl.authn.enabled=false
+fesl.authn.enabled=true
 fesl.authz.enabled=false
 
 # Settings common to all test configs with this appserver+db combo
@@ -29,6 +29,6 @@ database.password=fedoraAdmin
 database.username=fedoraAdmin
 fedora.admin.pass=fedoraAdmin
 deploy.local.services=true
-ssl.available=false
+ssl.available=true
 keystore.file=included
-install.type=quick
+install.type=custom
